# area-52-courses

./: .gitignore  README.md
01_Starting_with_CosmWasm/: README.md
01_Starting_with_CosmWasm/portal/: Cargo.toml  Developing.md  README.md
01_Starting_with_CosmWasm/portal/examples/: schema.rs
01_Starting_with_CosmWasm/portal/schema/: execute_msg.json  instantiate_msg.json  state.json
01_Starting_with_CosmWasm/portal/src/: contract.rs  execute_fns.rs  lib.rs  msg.rs  query_fns.rs  state.rs
01_Starting_with_CosmWasm/potion/: Cargo.toml  README.md
01_Starting_with_CosmWasm/potion/examples/: schema.rs
01_Starting_with_CosmWasm/potion/schema/: execute_msg.json  instantiate_msg.json  query_msg.json  state.json  swig_response.json
01_Starting_with_CosmWasm/potion/src/: contract.rs  error.rs  lib.rs  msg.rs  query_fns.rs  state.rs
01_Starting_with_CosmWasm/potion/src/execute_fns/: assert_sent_sufficient_payment.rs  check_sapience_level.rs  check_sent_required_payment.rs  cyborg_dna_generator.rs  imbibe_potion.rs  mod.rs  step_through_jumpring.rs
01_Starting_with_CosmWasm/universe/: README.md
01_Starting_with_CosmWasm/universe/schema/: execute_msg.json  sapient.json
01_Starting_with_CosmWasm/universe/src/: section31.rs  species.rs
02_Do_Cyborgs_Dream_of_NFTs/: README.md
02_Do_Cyborgs_Dream_of_NFTs/nft/cw721-soulbound/: Cargo.toml  README.md
02_Do_Cyborgs_Dream_of_NFTs/nft/cw721-soulbound/examples/: schema.rs
02_Do_Cyborgs_Dream_of_NFTs/nft/cw721-soulbound/schema/: execute_msg.json
02_Do_Cyborgs_Dream_of_NFTs/nft/cw721-soulbound/src/: contract_tests.rs  execute.rs  helpers.rs  msg.rs
02_Do_Cyborgs_Dream_of_NFTs/nft/passport-token/: Cargo.toml  NOTICE  README.md
02_Do_Cyborgs_Dream_of_NFTs/nft/passport-token/.github/workflows/: Basic.yml
02_Do_Cyborgs_Dream_of_NFTs/nft/passport-token/examples/: schema.rs
02_Do_Cyborgs_Dream_of_NFTs/nft/passport-token/schema/: all_nft_info_response.json  execute_msg.json  nft_info_response.json
02_Do_Cyborgs_Dream_of_NFTs/nft/passport-token/src/: lib.rs
02_Do_Cyborgs_Dream_of_NFTs/portal/: Cargo.toml
02_Do_Cyborgs_Dream_of_NFTs/portal/examples/: schema.rs
02_Do_Cyborgs_Dream_of_NFTs/portal/schema/: config.json  execute_msg.json  instantiate_msg.json  query_msg.json
02_Do_Cyborgs_Dream_of_NFTs/portal/src/: contract.rs  error.rs  execute_fns.rs  integration_tests.rs  lib.rs  msg.rs  query_fns.rs  state.rs
02_Do_Cyborgs_Dream_of_NFTs/universe/: .gitignore  Cargo.toml
02_Do_Cyborgs_Dream_of_NFTs/universe/examples/: schema.rs
02_Do_Cyborgs_Dream_of_NFTs/universe/schema/: sapience_response.json  sapience_scale.json  sapient.json  traveler.json
02_Do_Cyborgs_Dream_of_NFTs/universe/src/: lib.rs  species.rs  utils.rs
