[package]
name = "portal"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.0.0-beta"
cosmwasm-storage = "1.0.0-beta"
schemars = "0.8"
thiserror = "1.0.23"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
universe = { path = "../universe"}

[dev-dependencies]
cosmwasm-vm = "1.0.0-beta"
cosmwasm-schema = "1.0.0-beta"
